# cronicle

./: .gitignore  README.md  TODO  pyproject.toml
.github/workflows/: test.yaml
src/: cronicle.py  cronparse.py
src/cronicle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_cronicle.py  test_cronparse.py
