[tool.poetry]
name = "cronicle"
version = "0.1.0"
description = "A small tool for processing crontab syntax"
authors = ["Curtis Maloney <curtis@tinbrain.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
