[tool.poetry]
name = "cronparse"
version = "0.3.0"
description = "A small tool for processing crontab syntax"
authors = ["Curtis Maloney <curtis@tinbrain.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/funkybob/cronicle"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.770"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
